@@ -81,12 +81,6 @@ define ('MSG_FATAL', 2);
  */
 
 /**
- * Stores default temporary folder determined by {@link sys_get_temp_dir sys_get_temp_dir()}.
- * @global string $default_tmp_dir
- */
-$default_tmp_dir = '';
-
-/**
  * Stores all ScoreRender config options.
  * @global array $scorerender_options
  */
@@ -141,7 +135,15 @@ $notations = array (
 		'progs'       => array ('PMW_BIN')),
 );
 
-require_once('class.scorerender.inc.php');
+/**
+ * Utility functions used by ScoreRender
+ */
+require_once('scorerender-utils.php');
+
+/**
+ * Main ScoreRender class
+ */
+require_once('scorerender-class.php');
 
 foreach (array_values ($notations) as $notation)
 {
@@ -150,59 +152,6 @@ foreach (array_values ($notations) as $notation)
 	 */
 	require_once ($notation['includefile']);
 }
-
-
-/*
- * Backported functions -- sys_get_temp_dir and array_intersect_key
- */
-
-// http://www.phpit.net/article/creating-zip-tar-archives-dynamically-php/2/
-//
-if (!function_exists ('sys_get_temp_dir'))
-{
-	/**
-	 * @ignore
-	 */
-	function sys_get_temp_dir ()
-	{
-		// Try to get from environment variable
-		if ( !empty($_ENV['TMP']) )
-			return realpath( $_ENV['TMP'] );
-		elseif ( !empty($_ENV['TMPDIR']) )
-			return realpath( $_ENV['TMPDIR'] );
-		elseif ( !empty($_ENV['TEMP']) )
-			return realpath( $_ENV['TEMP'] );
-		else
-		{
-			// Detect by creating a temporary file and pick its dir name
-			$temp_file = tempnam( md5(uniqid(rand(), TRUE)), '' );
-			if ( !$temp_file) return false;
-
-			unlink( $temp_file );
-			return realpath( dirname($temp_file) );
-		}
-	}
-}
-
-// http://www.php.net/manual/en/function.array-intersect-key.php#68179
-//
-if (!function_exists ('array_intersect_key'))
-{
-	/**
-	 * @ignore
-	 */
-	function array_intersect_key ()
-	{
-		$arrs = func_get_args ();
-		$result = array_shift ($arrs);
-		foreach ($arrs as $array)
-			foreach (array_keys ($result) as $key)
-				if (!array_key_exists ($key, $array))
-					unset ($result[$key]);
-		return $result;
-	}
-}
-
 
 /**
  * Initialize text domain.
@@ -221,36 +170,6 @@ function scorerender_init_textdomain ()
 	load_plugin_textdomain (TEXTDOMAIN, ABSPATH . LANGDIR);
 }
 
-
-/**
- * Convenience function: Check if OS is Windows
- *
- * @since 0.2.50
- * return boolean True if OS is Windows, false otherwise.
- */
-function is_windows ()
-{
-	return (substr(PHP_OS, 0, 3) == 'WIN');
-}
-
-
-/**
- * Transform path string to Windows or Unix presentation
- *
- * @since 0.2.50
- * @param string $path The path to be transformed
- * @param boolean $is_internal Whether to always transform into Unix format, which is used for storing values into database. FALSE means using OS native representation.
- * @uses is_windows
- * @return string $path The resulting path, with appropriate slashes or backslashes
- */
-function get_path_presentation ($path, $is_internal)
-{
-	if (is_windows () && ! $is_internal)
-		return preg_replace ('#/+#', '\\', $path);
-
-	// FIXME: Japanese and Chinese users have to avoid non-UTF8 charsets
-	return preg_replace ('#\\\\+#', '/', $path);
-}
 
 /**
  * Transform all path related options in ScoreRender settings
@@ -276,19 +195,6 @@ function transform_paths (&$setting, $is_internal)
 }
 
 /**
- * Convenience function: Check if a path is aboslute path
- *
- * @since 0.2.50
- * @return boolean True if path is absolute, false otherwise.
- */
-function is_absolute_path ($path)
-{
-	// FIXME: How about network shares on Windows?
-	return ( (!is_windows() && (substr ($path, 0, 1) == '/')) ||
-	         ( is_windows() && preg_match ('/^[A-Za-z]:/', $path) ) );
-}
-
-/**
  * Guess default upload directory setting from WordPress.
  * 
  * WordPress is inconsistent with upload directory setting across multiple
@@ -300,10 +206,15 @@ function is_absolute_path ($path)
  * @uses is_absolute_path
  * @return array Returns array containing both full path ('path' key) and corresponding URL ('url' key)
  */
-function get_upload_dir ()
+function scorerender_get_upload_dir ()
 {
 	$uploads = wp_upload_dir();
 	
+	/* Path setting read order:
+	 * 1. wp_upload_dir()
+	 * 2. upload_path option
+	 * 3. ABSPATH/wp-content/uploads
+	 */
 	if (isset ($uploads['basedir']))
 		$path = $uploads['basedir'];
 	else
@@ -315,6 +226,11 @@ function get_upload_dir ()
 	if (!is_absolute_path ($path))
 		$path = ABSPATH . $path;
 
+	/* URL setting read order:
+	 * 1. wp_upload_dir()
+	 * 2. upload_url_path option
+	 * 3. $siteurl/wp-content/uploads
+	 */
 	if (isset ($uploads['baseurl']))
 		$url = $uploads['baseurl'];
 	else
@@ -340,7 +256,7 @@ function get_upload_dir ()
  */
 function scorerender_get_options ()
 {
-	global $scorerender_options, $default_tmp_dir;
+	global $scorerender_options;
 
 	$scorerender_options = get_option ('scorerender_options');
 
@@ -355,8 +271,7 @@ function scorerender_get_options ()
 		return;
 	}
 
-	$default_tmp_dir = sys_get_temp_dir();
-	$cachefolder = get_upload_dir ();
+	$cachefolder = scorerender_get_upload_dir ();
 
 	$defprog = array();
 	// ImageMagick use versioned folders, abcm2ps don't have Win32 installer
@@ -369,7 +284,7 @@ function scorerender_get_options ()
 			'convert' => 'C:\Program Files\ImageMagick\convert.exe',
 			'lilypond' => 'C:\Program Files\Lilypond\usr\bin\lilypond.exe',
 			'mup' => 'C:\Program Files\mupmate\mup.exe',
-			'pmw' => 'C:\Program Files\pmw\pmw.exe',
+			'pmw' => '',
 		);
 	else
 		$defprog = array (
@@ -384,7 +299,7 @@ function scorerender_get_options ()
 	$defaults = array
 	(
 		'DB_VERSION'           => DATABASE_VERSION,
-		'TEMP_DIR'             => $default_tmp_dir,
+		'TEMP_DIR'             => sys_get_temp_dir(),
 		'CONVERT_BIN'          => $defprog['convert'],
 		'CACHE_DIR'            => $cachefolder['path'],
 		'CACHE_URL'            => $cachefolder['url'],
@@ -821,7 +736,7 @@ function scorerender_update_options ()
 		!is_writable ($newopt['TEMP_DIR']) )
 	{
 		$errmsgs[] = 'temp_dir_not_writable';
-		$newopt['TEMP_DIR'] = $default_tmp_dir;
+		$newopt['TEMP_DIR'] = '';
 	}
 
 	if ( empty ($newopt['CACHE_DIR']) )
