@@ -1,3 +1,10 @@
+2008-09-19  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php: Code refactoring, move util functions to
+	  scorerender-utils.php
+	* class.scorerender.inc.php -> scorerender-class.php
+	* Other include files moved to notation/ folder
+
 2008-09-18  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.*.inc.php: Moved to notation/ subdirectory.
